# avito-tech-test-task

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_06_06_1257-20ea989e38bc_.py  2024_06_06_1403-6490c4bdc62e_.py  2024_06_06_1734-cdab4cec1258_.py
stats_counter/: config.py  database.py  main.py  utils.py
stats_counter/statistics/: models.py  router.py  schemas.py
